--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/Assets/
+/ProjectSettings/
+.editorconfig
+.vsconfig
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
